CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

INCLUDE(CMakeForceCompiler)
include(CMakeDetermineASMCompiler)

SET(CMAKE_SYSTEM_NAME SegaSaturn)

# Specify the cross compiler.
CMAKE_FORCE_C_COMPILER("C:/Program Files (x86)/KPIT Cummins/GNUSHv10.02-ELF/sh-elf/bin/sh-elf-gcc.exe" GNU)
CMAKE_FORCE_CXX_COMPILER("C:/Program Files (x86)/KPIT Cummins/GNUSHv10.02-ELF/sh-elf/bin/sh-elf-g++.exe" GNU)
SET(CMAKE_FIND_ROOT_PATH "C:/Program Files (x86)/KPIT Cummins/GNUSHv10.02-ELF/sh-elf/bin/" "C:/Program Files (x86)/KPIT Cummins/GNUSHv10.02-ELF/Other Utilities/")

PROJECT(iapetus)

#CONFIGURE_FILE(config.h.cmake config.h)

set(IAPETUS_VERSION_MAJOR 0)
set(IAPETUS_VERSION_MINOR 1)
set(IAPETUS_VERSION_PATCH 0)
set(IAPETUS_VERSION "${IAPETUS_VERSION_MAJOR}.${IAPETUS_VERSION_MINOR}.${IAPETUS_VERSION_PATCH}")

set(CPACK_SOURCE_GENERATOR TGZ)
set(CPACK_PACKAGE_VERSION_MAJOR ${IAPETUS_VERSION_MAJOR})
set(CPACK_PACKAGE_VERSION_MINOR ${IAPETUS_VERSION_MINOR})
set(CPACK_PACKAGE_VERSION_PATCH ${IAPETUS_VERSION_PATCH})
set(CPACK_PACKAGE_VENDOR "Theo Berkau")
set(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_CURRENT_SOURCE_DIR}/COPYING")
set(CPACK_SOURCE_PACKAGE_FILE_NAME "iapetus-${IAPETUS_VERSION}")
include(CPack)

SET(CMAKE_CONFIGURATION_TYPES Release)
add_subdirectory(src)
